--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,29 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // Selenide для работы с Selenium
+    testImplementation 'com.codeborne:selenide:6.17.0'
+
+    // Cucumber для BDD-тестирования
+    testImplementation 'io.cucumber:cucumber-java:7.11.2'
+    testImplementation 'io.cucumber:cucumber-junit:7.11.2'
+
+    // JUnit для запуска тестов (если требуется)
+    testImplementation 'junit:junit:4.13.2'
+
+
+    testImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.28.1'
+
+    testImplementation group: 'io.qameta.allure', name: 'allure-commandline', version: '2.29.0', ext: 'pom'
+    testImplementation group: 'io.qameta.allure', name: 'allure-assertj', version: '2.28.1'
+    testImplementation group: 'io.qameta.allure', name: 'allure-rest-assured', version: '2.28.1'
+    testImplementation group: 'io.qameta.allure', name: 'allure-java-commons', version: '2.28.1'
+    testImplementation 'org.aspectj:aspectjweaver:1.9.19'
+    testImplementation group: 'io.qameta.allure', name: 'allure-selenide', version: '2.28.1'
+    testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.28.1'
+
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
